sdmmagpie: Remove useless 40 MiB memory dump region
This reserved memory dump region is intended to be used with the memory
dump v2 driver, but we've disabled that and we don't need this memory
dumping functionality. Remove the unused region and disable the
associated driver node to save 40 MiB of memory.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Change-Id: Ifece692dbc3f09e300ae06d0074fe5c31d19f345
Signed-off-by: KenHV <yo@kenharris.xyz>

--- a/arch/arm64/boot/dts/qcom/sdmmagpie-liber-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-liber-common-overlay.dtsi
@@ -563,3 +563,10 @@
 	connectors = <&sde_rscc &sde_wb &sde_dsi>;
 };
 
+&dump_mem {
+    status = "disabled";
+};
+
+&mem_dump {
+    status = "disabled";
+};
