--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -987,6 +987,22 @@
 			   &cdsp_cdsp_l3_lat>;
 
 		#clock-cells = <1>;
+		qcom,cpufreq-table-0 =
+			<1708800>,
+			<1804800>;
+
+		qcom,cpufreq-table-6 =
+			< 806400>,
+			< 979200>,
+			<1094400>,
+			<1209600>,
+			<1324800>,
+			<1555200>,
+			<1708800>,
+			<1843200>,
+			<1939200>,
+			<2169600>,
+			<2208000>;
 	};
 
 	cpucc_debug: syscon@182a0018 {
